<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" >

		<TextView android:id="@+id/ttsTitle" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingBottom="2px" android:layout_alignParentTop="true"
			android:textSize="25sp"
			/>


	<TextView android:id="@+id/ttsText" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_below="@id/ttsTitle"
					android:textSize="20sp"
		/>


	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/linLay"
		android:layout_alignParentBottom="true">
		<Button android:id="@+id/readRss" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:text="@string/readRss" />
				<Button android:id="@+id/search" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:text="@string/search" />
		<Button android:id="@+id/prev" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:text="@string/prev" />
						<Button android:id="@+id/next" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/next"
			android:layout_marginLeft="20px" />
		<Button android:id="@+id/stop" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/stop" />
	</LinearLayout>


<Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 		android:textSize="50sp"	android:layout_above="@id/linLay"/>



</RelativeLayout>